crates/monkey-lang/src/parsing/snapshots/parser/monkey_lang__parsing__parser__tests__parser@lit_fn.snap
---
source: crates/monkey-lang/src/parsing/parser.rs
expression: "parse::<ast::File>(&input).map(|f| f.stmts)"

---
Ok(
    [
        Let(
            StmtLet {
                let_token: LetKw {
                    token: Token {
                        span: Span {
                            start: 0,
                            end: 3,
                        },
                        kind: LetKw,
                        text: "let",
                    },
                },
                ident: Ident {
                    token: Token {
                        span: Span {
                            start: 4,
                            end: 7,
                        },
                        kind: Ident,
                        text: "add",
                    },
                },
                eq: Eq {
                    token: Token {
                        span: Span {
                            start: 8,
                            end: 9,
                        },
                        kind: Eq,
                        text: "=",
                    },
                },
                expr: Lit(
                    Fn(
                        LitFn {
                            fn_token: FnKw {
                                token: Token {
                                    span: Span {
                                        start: 10,
                                        end: 12,
                                    },
                                    kind: FnKw,
                                    text: "fn",
                                },
                            },
                            parameters: Parameters(
                                List {
                                    open_delimit: LParen {
                                        token: Token {
                                            span: Span {
                                                start: 12,
                                                end: 13,
                                            },
                                            kind: LParen,
                                            text: "(",
                                        },
                                    },
                                    inner: [
                                        Ident {
                                            token: Token {
                                                span: Span {
                                                    start: 13,
                                                    end: 14,
                                                },
                                                kind: Ident,
                                                text: "x",
                                            },
                                        },
                                        Ident {
                                            token: Token {
                                                span: Span {
                                                    start: 16,
                                                    end: 17,
                                                },
                                                kind: Ident,
                                                text: "y",
                                            },
                                        },
                                        Ident {
                                            token: Token {
                                                span: Span {
                                                    start: 19,
                                                    end: 20,
                                                },
                                                kind: Ident,
                                                text: "z",
                                            },
                                        },
                                    ],
                                    close_delimit: RParen {
                                        token: Token {
                                            span: Span {
                                                start: 20,
                                                end: 21,
                                            },
                                            kind: RParen,
                                            text: ")",
                                        },
                                    },
                                    sep: PhantomData,
                                },
                            ),
                            body: Block {
                                open_bracket: LBrace {
                                    token: Token {
                                        span: Span {
                                            start: 22,
                                            end: 23,
                                        },
                                        kind: LBrace,
                                        text: "{",
                                    },
                                },
                                stmts: [
                                    Let(
                                        StmtLet {
                                            let_token: LetKw {
                                                token: Token {
                                                    span: Span {
                                                        start: 28,
                                                        end: 31,
                                                    },
                                                    kind: LetKw,
                                                    text: "let",
                                                },
                                            },
                                            ident: Ident {
                                                token: Token {
                                                    span: Span {
                                                        start: 32,
                                                        end: 37,
                                                    },
                                                    kind: Ident,
                                                    text: "hello",
                                                },
                                            },
                                            eq: Eq {
                                                token: Token {
                                                    span: Span {
                                                        start: 38,
                                                        end: 39,
                                                    },
                                                    kind: Eq,
                                                    text: "=",
                                                },
                                            },
                                            expr: Lit(
                                                Num(
                                                    LitNum {
                                                        num: Number {
                                                            token: Token {
                                                                span: Span {
                                                                    start: 40,
                                                                    end: 41,
                                                                },
                                                                kind: Number,
                                                                text: "5",
                                                            },
                                                        },
                                                        value: 5.0,
                                                    },
                                                ),
                                            ),
                                            semi: Semicolon {
                                                token: Token {
                                                    span: Span {
                                                        start: 41,
                                                        end: 42,
                                                    },
                                                    kind: Semicolon,
                                                    text: ";",
                                                },
                                            },
                                        },
                                    ),
                                ],
                                close_bracket: RBrace {
                                    token: Token {
                                        span: Span {
                                            start: 43,
                                            end: 44,
                                        },
                                        kind: RBrace,
                                        text: "}",
                                    },
                                },
                            },
                        },
                    ),
                ),
                semi: Semicolon {
                    token: Token {
                        span: Span {
                            start: 44,
                            end: 45,
                        },
                        kind: Semicolon,
                        text: ";",
                    },
                },
            },
        ),
        Let(
            StmtLet {
                let_token: LetKw {
                    token: Token {
                        span: Span {
                            start: 47,
                            end: 50,
                        },
                        kind: LetKw,
                        text: "let",
                    },
                },
                ident: Ident {
                    token: Token {
                        span: Span {
                            start: 51,
                            end: 54,
                        },
                        kind: Ident,
                        text: "one",
                    },
                },
                eq: Eq {
                    token: Token {
                        span: Span {
                            start: 55,
                            end: 56,
                        },
                        kind: Eq,
                        text: "=",
                    },
                },
                expr: Lit(
                    Fn(
                        LitFn {
                            fn_token: FnKw {
                                token: Token {
                                    span: Span {
                                        start: 57,
                                        end: 59,
                                    },
                                    kind: FnKw,
                                    text: "fn",
                                },
                            },
                            parameters: Parameters(
                                List {
                                    open_delimit: LParen {
                                        token: Token {
                                            span: Span {
                                                start: 59,
                                                end: 60,
                                            },
                                            kind: LParen,
                                            text: "(",
                                        },
                                    },
                                    inner: [],
                                    close_delimit: RParen {
                                        token: Token {
                                            span: Span {
                                                start: 60,
                                                end: 61,
                                            },
                                            kind: RParen,
                                            text: ")",
                                        },
                                    },
                                    sep: PhantomData,
                                },
                            ),
                            body: Block {
                                open_bracket: LBrace {
                                    token: Token {
                                        span: Span {
                                            start: 62,
                                            end: 63,
                                        },
                                        kind: LBrace,
                                        text: "{",
                                    },
                                },
                                stmts: [
                                    Return(
                                        StmtReturn {
                                            return_token: ReturnKw {
                                                token: Token {
                                                    span: Span {
                                                        start: 68,
                                                        end: 74,
                                                    },
                                                    kind: ReturnKw,
                                                    text: "return",
                                                },
                                            },
                                            expr: Lit(
                                                Num(
                                                    LitNum {
                                                        num: Number {
                                                            token: Token {
                                                                span: Span {
                                                                    start: 75,
                                                                    end: 76,
                                                                },
                                                                kind: Number,
                                                                text: "1",
                                                            },
                                                        },
                                                        value: 1.0,
                                                    },
                                                ),
                                            ),
                                            semi: Semicolon {
                                                token: Token {
                                                    span: Span {
                                                        start: 76,
                                                        end: 77,
                                                    },
                                                    kind: Semicolon,
                                                    text: ";",
                                                },
                                            },
                                        },
                                    ),
                                ],
                                close_bracket: RBrace {
                                    token: Token {
                                        span: Span {
                                            start: 78,
                                            end: 79,
                                        },
                                        kind: RBrace,
                                        text: "}",
                                    },
                                },
                            },
                        },
                    ),
                ),
                semi: Semicolon {
                    token: Token {
                        span: Span {
                            start: 79,
                            end: 80,
                        },
                        kind: Semicolon,
                        text: ";",
                    },
                },
            },
        ),
    ],
)
