crates/monkey-lang/src/parsing/snapshots/parser/monkey_lang__parsing__parser__tests__parser@lit_num.snap
---
source: crates/monkey-lang/src/parsing/parser.rs
expression: "parse::<ast::File>(&input).map(|f| f.stmts)"

---
Ok(
    [
        Expr(
            Lit(
                Num(
                    LitNum {
                        num: Number {
                            token: Token {
                                span: Span {
                                    start: 0,
                                    end: 6,
                                },
                                kind: Number,
                                text: "132432",
                            },
                        },
                        value: 132432.0,
                    },
                ),
            ),
            Semicolon {
                token: Token {
                    span: Span {
                        start: 6,
                        end: 7,
                    },
                    kind: Semicolon,
                    text: ";",
                },
            },
        ),
        Expr(
            Lit(
                Num(
                    LitNum {
                        num: Number {
                            token: Token {
                                span: Span {
                                    start: 8,
                                    end: 11,
                                },
                                kind: Number,
                                text: "987",
                            },
                        },
                        value: 987.0,
                    },
                ),
            ),
            Semicolon {
                token: Token {
                    span: Span {
                        start: 11,
                        end: 12,
                    },
                    kind: Semicolon,
                    text: ";",
                },
            },
        ),
        Expr(
            Lit(
                Num(
                    LitNum {
                        num: Number {
                            token: Token {
                                span: Span {
                                    start: 13,
                                    end: 17,
                                },
                                kind: Number,
                                text: "1234",
                            },
                        },
                        value: 1234.0,
                    },
                ),
            ),
            Semicolon {
                token: Token {
                    span: Span {
                        start: 17,
                        end: 18,
                    },
                    kind: Semicolon,
                    text: ";",
                },
            },
        ),
    ],
)
