crates/monkey-lang/src/parsing/snapshots/parser/monkey_lang__parsing__parser__tests__parser@stmt_if.snap
---
source: crates/monkey-lang/src/parsing/parser.rs
expression: "parse::<ast::File>(&input).map(|f| f.stmts)"

---
Ok(
    [
        If(
            StmtIf {
                if_token: IfKw {
                    token: Token {
                        span: Span {
                            start: 0,
                            end: 2,
                        },
                        kind: IfKw,
                        text: "if",
                    },
                },
                condition: Lit(
                    Bool(
                        LitBool {
                            token: Token {
                                span: Span {
                                    start: 3,
                                    end: 7,
                                },
                                kind: TrueKw,
                                text: "true",
                            },
                            value: true,
                        },
                    ),
                ),
                block: Block {
                    open_bracket: LBrace {
                        token: Token {
                            span: Span {
                                start: 8,
                                end: 9,
                            },
                            kind: LBrace,
                            text: "{",
                        },
                    },
                    stmts: [
                        Let(
                            StmtLet {
                                let_token: LetKw {
                                    token: Token {
                                        span: Span {
                                            start: 14,
                                            end: 17,
                                        },
                                        kind: LetKw,
                                        text: "let",
                                    },
                                },
                                ident: Ident {
                                    token: Token {
                                        span: Span {
                                            start: 18,
                                            end: 23,
                                        },
                                        kind: Ident,
                                        text: "hello",
                                    },
                                },
                                eq: Eq {
                                    token: Token {
                                        span: Span {
                                            start: 24,
                                            end: 25,
                                        },
                                        kind: Eq,
                                        text: "=",
                                    },
                                },
                                expr: Lit(
                                    Num(
                                        LitNum {
                                            num: Number {
                                                token: Token {
                                                    span: Span {
                                                        start: 26,
                                                        end: 27,
                                                    },
                                                    kind: Number,
                                                    text: "5",
                                                },
                                            },
                                            value: 5.0,
                                        },
                                    ),
                                ),
                                semi: Semicolon {
                                    token: Token {
                                        span: Span {
                                            start: 27,
                                            end: 28,
                                        },
                                        kind: Semicolon,
                                        text: ";",
                                    },
                                },
                            },
                        ),
                        Let(
                            StmtLet {
                                let_token: LetKw {
                                    token: Token {
                                        span: Span {
                                            start: 33,
                                            end: 36,
                                        },
                                        kind: LetKw,
                                        text: "let",
                                    },
                                },
                                ident: Ident {
                                    token: Token {
                                        span: Span {
                                            start: 37,
                                            end: 44,
                                        },
                                        kind: Ident,
                                        text: "another",
                                    },
                                },
                                eq: Eq {
                                    token: Token {
                                        span: Span {
                                            start: 45,
                                            end: 46,
                                        },
                                        kind: Eq,
                                        text: "=",
                                    },
                                },
                                expr: Lit(
                                    Str(
                                        LitStr {
                                            token: Token {
                                                span: Span {
                                                    start: 48,
                                                    end: 51,
                                                },
                                                kind: String,
                                                text: "adf",
                                            },
                                        },
                                    ),
                                ),
                                semi: Semicolon {
                                    token: Token {
                                        span: Span {
                                            start: 52,
                                            end: 53,
                                        },
                                        kind: Semicolon,
                                        text: ";",
                                    },
                                },
                            },
                        ),
                        Return(
                            StmtReturn {
                                return_token: ReturnKw {
                                    token: Token {
                                        span: Span {
                                            start: 58,
                                            end: 64,
                                        },
                                        kind: ReturnKw,
                                        text: "return",
                                    },
                                },
                                expr: Lit(
                                    Num(
                                        LitNum {
                                            num: Number {
                                                token: Token {
                                                    span: Span {
                                                        start: 65,
                                                        end: 66,
                                                    },
                                                    kind: Number,
                                                    text: "5",
                                                },
                                            },
                                            value: 5.0,
                                        },
                                    ),
                                ),
                                semi: Semicolon {
                                    token: Token {
                                        span: Span {
                                            start: 66,
                                            end: 67,
                                        },
                                        kind: Semicolon,
                                        text: ";",
                                    },
                                },
                            },
                        ),
                    ],
                    close_bracket: RBrace {
                        token: Token {
                            span: Span {
                                start: 68,
                                end: 69,
                            },
                            kind: RBrace,
                            text: "}",
                        },
                    },
                },
                next: None,
            },
        ),
    ],
)
